Reformatted all of the code.